// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSchemeProvider renders styling for dark mode when specified 1`] = `
<style>
  :root {
  --g-colorRed0: #e60023;
  --g-colorRed100: #ff5247;
  --g-colorRed100Active: #b8001b;
  --g-colorRed100Hovered: #cf001f;
  --g-colorGray0: #030303;
  --g-colorGray0Active: #1f1f1f;
  --g-colorGray0Hovered: #121212;
  --g-colorGray50: #212121;
  --g-colorGray100: #404040;
  --g-colorGray100Active: #666;
  --g-colorGray100Hovered: #535353;
  --g-colorGray150: #585858;
  --g-colorGray150Hovered: #535353;
  --g-colorGray200: #ababab;
  --g-colorGray200Active: #9b9b9b;
  --g-colorGray200Hovered: #919191;
  --g-colorGray300: #efefef;
  --g-colorGray400: #fff;
  --g-colorTransparentDarkGray: rgba(255, 255, 255, 0.8);
  --g-colorTransparentGray60: rgba(250, 250, 250, 0.5);
  --g-colorTransparentGray100: rgba(250, 250, 250, 0.6);
  --g-colorTransparentGray500: rgba(0, 0, 0, 0.5);
  --g-colorTransparentWhite: rgba(51, 51, 51, 0.8);
  --color-text-default: #ffffff;
  --color-text-subtle: #a5a5a5;
  --color-text-success: #39d377;
  --color-text-error: #eb4242;
  --color-text-warning: #e18d00;
  --color-text-inverse: #111111;
  --color-text-shopping: #75bfff;
  --color-text-link: #45a3fe;
  --color-text-icon-default: #ffffff;
  --color-text-icon-subtle: #a5a5a5;
  --color-text-icon-success: #39d377;
  --color-text-icon-error: #eb4242;
  --color-text-icon-warning: #e18d00;
  --color-text-icon-info: #75bfff;
  --color-text-icon-recommendation: #b190ff;
  --color-text-icon-inverse: #111111;
  --color-text-icon-shopping: #75bfff;
  --color-background-default: #111111;
  --color-background-info-base: #75bfff;
  --color-background-info-weak: #003c96;
  --color-background-error-base: #f47171;
  --color-background-error-weak: #660000;
  --color-background-warning-base: #fdc900;
  --color-background-warning-weak: #7c2d00;
  --color-background-success-base: #6bec8c;
  --color-background-success-weak: #00422c;
  --color-background-recommendation-base: #b190ff;
  --color-background-recommendation-weak: #550aa9;
  --color-background-shopping: #75bfff;
  --color-background-secondary-base: #767676;
  --color-background-tertiary-base: #cdcdcd;
  --color-background-selected-base: #e9e9e9;
  --color-background-inverse-base: #f9f9f9;
  --color-background-education: #75bfff;
  --color-background-elevation-accent: #191919;
  --color-background-elevation-floating: #2b2b2b;
  --color-background-elevation-raised: #4a4a4a;
  --color-border-container: #4a4a4a;
  --color-border-default: #cdcdcd;
  --color-border-error: #f47171;
  --color-data-visualization-10: #d5c7ff;
  --color-data-visualization-11: #6bec8c;
  --color-data-visualization-12: #de2c62;
  --color-data-visualization-primary: #007cff;
  --color-data-visualization-success-graph: #6bec8c;
  --color-data-visualization-success-text: #39d377;
  --color-data-visualization-error: #eb4242;
  --color-data-visualization-01: #48d5c6;
  --color-data-visualization-02: #fdc900;
  --color-data-visualization-03: #9e68ff;
  --color-data-visualization-04: #fe8eb1;
  --color-data-visualization-05: #007cff;
  --color-data-visualization-06: #f77a38;
  --color-data-visualization-07: #abdbff;
  --color-data-visualization-08: #ffc58f;
  --color-data-visualization-09: #009990;
  --elevation-floating: none;
  --elevation-raised-top: 0 0.5px 0 #f9f9f9;
  --elevation-raised-bottom: 0 -0.5px 0 #f9f9f9;
 }
</style>
`;

exports[`ColorSchemeProvider renders styling for light mode when no color scheme specified 1`] = `
<style>
  :root {
  --g-colorRed0: #ff5247;
  --g-colorRed100: #e60023;
  --g-colorRed100Active: #a3081a;
  --g-colorRed100Hovered: #ad081b;
  --g-colorGray0: #fff;
  --g-colorGray0Active: #e0e0e0;
  --g-colorGray0Hovered: #f0f0f0;
  --g-colorGray50: #fff;
  --g-colorGray100: #efefef;
  --g-colorGray100Active: #dadada;
  --g-colorGray100Hovered: #e2e2e2;
  --g-colorGray150: #ddd;
  --g-colorGray150Hovered: #d0d0d0;
  --g-colorGray200: #767676;
  --g-colorGray200Active: #828282;
  --g-colorGray200Hovered: #878787;
  --g-colorGray300: #111;
  --g-colorGray400: #000;
  --g-colorTransparentDarkGray: rgba(51, 51, 51, 0.8);
  --g-colorTransparentGray60: rgba(0, 0, 0, 0.06);
  --g-colorTransparentGray100: rgba(0, 0, 0, 0.1);
  --g-colorTransparentGray500: rgba(0, 0, 0, 0.1);
  --g-colorTransparentWhite: rgba(255, 255, 255, 0.8);
  --color-text-default: #111111;
  --color-text-subtle: #767676;
  --color-text-success: #005f3e;
  --color-text-error: #cc0000;
  --color-text-warning: #bd5b00;
  --color-text-inverse: #ffffff;
  --color-text-shopping: #0074e8;
  --color-text-link: #004ba9;
  --color-text-icon-default: #111111;
  --color-text-icon-subtle: #767676;
  --color-text-icon-success: #005f3e;
  --color-text-icon-error: #cc0000;
  --color-text-icon-warning: #bd5b00;
  --color-text-icon-info: #0074e8;
  --color-text-icon-recommendation: #812ae7;
  --color-text-icon-inverse: #ffffff;
  --color-text-icon-shopping: #0074e8;
  --color-background-default: #ffffff;
  --color-background-info-base: #0074e8;
  --color-background-info-weak: #d7edff;
  --color-background-error-base: #cc0000;
  --color-background-error-weak: #ffe0e0;
  --color-background-warning-base: #bd5b00;
  --color-background-warning-weak: #ffe4c1;
  --color-background-success-base: #008753;
  --color-background-success-weak: #c3f9c2;
  --color-background-recommendation-base: #812ae7;
  --color-background-recommendation-weak: #e9e4ff;
  --color-background-shopping: #0074e8;
  --color-background-secondary-base: #e9e9e9;
  --color-background-tertiary-base: #767676;
  --color-background-selected-base: #111111;
  --color-background-inverse-base: #111111;
  --color-background-education: #0074e8;
  --color-background-elevation-accent: #f1f1f1;
  --color-background-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-elevation-raised: rgba(0, 0, 0, 0);
  --color-border-container: #cdcdcd;
  --color-border-default: #767676;
  --color-border-error: #cc0000;
  --color-data-visualization-10: #9e68ff;
  --color-data-visualization-11: #008753;
  --color-data-visualization-12: #630233;
  --color-data-visualization-primary: #003c96;
  --color-data-visualization-success-graph: #008753;
  --color-data-visualization-success-text: #005f3e;
  --color-data-visualization-error: #cc0000;
  --color-data-visualization-01: #009990;
  --color-data-visualization-02: #d86800;
  --color-data-visualization-03: #6b16ca;
  --color-data-visualization-04: #de2c62;
  --color-data-visualization-05: #003c96;
  --color-data-visualization-06: #a42700;
  --color-data-visualization-07: #0074e8;
  --color-data-visualization-08: #de3700;
  --color-data-visualization-09: #005c62;
  --elevation-floating: 0 0 8px rgba(0, 0, 0, 0.10);
  --elevation-raised-top: 0 2px 8px rgba(0, 0, 0, 0.12);
  --elevation-raised-bottom: 0 -2px 8px rgba(0, 0, 0, 0.12);
 }
</style>
`;

exports[`ColorSchemeProvider renders styling for light mode when specified 1`] = `
<style>
  :root {
  --g-colorRed0: #ff5247;
  --g-colorRed100: #e60023;
  --g-colorRed100Active: #a3081a;
  --g-colorRed100Hovered: #ad081b;
  --g-colorGray0: #fff;
  --g-colorGray0Active: #e0e0e0;
  --g-colorGray0Hovered: #f0f0f0;
  --g-colorGray50: #fff;
  --g-colorGray100: #efefef;
  --g-colorGray100Active: #dadada;
  --g-colorGray100Hovered: #e2e2e2;
  --g-colorGray150: #ddd;
  --g-colorGray150Hovered: #d0d0d0;
  --g-colorGray200: #767676;
  --g-colorGray200Active: #828282;
  --g-colorGray200Hovered: #878787;
  --g-colorGray300: #111;
  --g-colorGray400: #000;
  --g-colorTransparentDarkGray: rgba(51, 51, 51, 0.8);
  --g-colorTransparentGray60: rgba(0, 0, 0, 0.06);
  --g-colorTransparentGray100: rgba(0, 0, 0, 0.1);
  --g-colorTransparentGray500: rgba(0, 0, 0, 0.1);
  --g-colorTransparentWhite: rgba(255, 255, 255, 0.8);
  --color-text-default: #111111;
  --color-text-subtle: #767676;
  --color-text-success: #005f3e;
  --color-text-error: #cc0000;
  --color-text-warning: #bd5b00;
  --color-text-inverse: #ffffff;
  --color-text-shopping: #0074e8;
  --color-text-link: #004ba9;
  --color-text-icon-default: #111111;
  --color-text-icon-subtle: #767676;
  --color-text-icon-success: #005f3e;
  --color-text-icon-error: #cc0000;
  --color-text-icon-warning: #bd5b00;
  --color-text-icon-info: #0074e8;
  --color-text-icon-recommendation: #812ae7;
  --color-text-icon-inverse: #ffffff;
  --color-text-icon-shopping: #0074e8;
  --color-background-default: #ffffff;
  --color-background-info-base: #0074e8;
  --color-background-info-weak: #d7edff;
  --color-background-error-base: #cc0000;
  --color-background-error-weak: #ffe0e0;
  --color-background-warning-base: #bd5b00;
  --color-background-warning-weak: #ffe4c1;
  --color-background-success-base: #008753;
  --color-background-success-weak: #c3f9c2;
  --color-background-recommendation-base: #812ae7;
  --color-background-recommendation-weak: #e9e4ff;
  --color-background-shopping: #0074e8;
  --color-background-secondary-base: #e9e9e9;
  --color-background-tertiary-base: #767676;
  --color-background-selected-base: #111111;
  --color-background-inverse-base: #111111;
  --color-background-education: #0074e8;
  --color-background-elevation-accent: #f1f1f1;
  --color-background-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-elevation-raised: rgba(0, 0, 0, 0);
  --color-border-container: #cdcdcd;
  --color-border-default: #767676;
  --color-border-error: #cc0000;
  --color-data-visualization-10: #9e68ff;
  --color-data-visualization-11: #008753;
  --color-data-visualization-12: #630233;
  --color-data-visualization-primary: #003c96;
  --color-data-visualization-success-graph: #008753;
  --color-data-visualization-success-text: #005f3e;
  --color-data-visualization-error: #cc0000;
  --color-data-visualization-01: #009990;
  --color-data-visualization-02: #d86800;
  --color-data-visualization-03: #6b16ca;
  --color-data-visualization-04: #de2c62;
  --color-data-visualization-05: #003c96;
  --color-data-visualization-06: #a42700;
  --color-data-visualization-07: #0074e8;
  --color-data-visualization-08: #de3700;
  --color-data-visualization-09: #005c62;
  --elevation-floating: 0 0 8px rgba(0, 0, 0, 0.10);
  --elevation-raised-top: 0 2px 8px rgba(0, 0, 0, 0.12);
  --elevation-raised-bottom: 0 -2px 8px rgba(0, 0, 0, 0.12);
 }
</style>
`;

exports[`ColorSchemeProvider renders styling with a custom class if has an id 1`] = `
<style>
  .__gestaltThemetestId {
  --g-colorRed0: #ff5247;
  --g-colorRed100: #e60023;
  --g-colorRed100Active: #a3081a;
  --g-colorRed100Hovered: #ad081b;
  --g-colorGray0: #fff;
  --g-colorGray0Active: #e0e0e0;
  --g-colorGray0Hovered: #f0f0f0;
  --g-colorGray50: #fff;
  --g-colorGray100: #efefef;
  --g-colorGray100Active: #dadada;
  --g-colorGray100Hovered: #e2e2e2;
  --g-colorGray150: #ddd;
  --g-colorGray150Hovered: #d0d0d0;
  --g-colorGray200: #767676;
  --g-colorGray200Active: #828282;
  --g-colorGray200Hovered: #878787;
  --g-colorGray300: #111;
  --g-colorGray400: #000;
  --g-colorTransparentDarkGray: rgba(51, 51, 51, 0.8);
  --g-colorTransparentGray60: rgba(0, 0, 0, 0.06);
  --g-colorTransparentGray100: rgba(0, 0, 0, 0.1);
  --g-colorTransparentGray500: rgba(0, 0, 0, 0.1);
  --g-colorTransparentWhite: rgba(255, 255, 255, 0.8);
  --color-text-default: #111111;
  --color-text-subtle: #767676;
  --color-text-success: #005f3e;
  --color-text-error: #cc0000;
  --color-text-warning: #bd5b00;
  --color-text-inverse: #ffffff;
  --color-text-shopping: #0074e8;
  --color-text-link: #004ba9;
  --color-text-icon-default: #111111;
  --color-text-icon-subtle: #767676;
  --color-text-icon-success: #005f3e;
  --color-text-icon-error: #cc0000;
  --color-text-icon-warning: #bd5b00;
  --color-text-icon-info: #0074e8;
  --color-text-icon-recommendation: #812ae7;
  --color-text-icon-inverse: #ffffff;
  --color-text-icon-shopping: #0074e8;
  --color-background-default: #ffffff;
  --color-background-info-base: #0074e8;
  --color-background-info-weak: #d7edff;
  --color-background-error-base: #cc0000;
  --color-background-error-weak: #ffe0e0;
  --color-background-warning-base: #bd5b00;
  --color-background-warning-weak: #ffe4c1;
  --color-background-success-base: #008753;
  --color-background-success-weak: #c3f9c2;
  --color-background-recommendation-base: #812ae7;
  --color-background-recommendation-weak: #e9e4ff;
  --color-background-shopping: #0074e8;
  --color-background-secondary-base: #e9e9e9;
  --color-background-tertiary-base: #767676;
  --color-background-selected-base: #111111;
  --color-background-inverse-base: #111111;
  --color-background-education: #0074e8;
  --color-background-elevation-accent: #f1f1f1;
  --color-background-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-elevation-raised: rgba(0, 0, 0, 0);
  --color-border-container: #cdcdcd;
  --color-border-default: #767676;
  --color-border-error: #cc0000;
  --color-data-visualization-10: #9e68ff;
  --color-data-visualization-11: #008753;
  --color-data-visualization-12: #630233;
  --color-data-visualization-primary: #003c96;
  --color-data-visualization-success-graph: #008753;
  --color-data-visualization-success-text: #005f3e;
  --color-data-visualization-error: #cc0000;
  --color-data-visualization-01: #009990;
  --color-data-visualization-02: #d86800;
  --color-data-visualization-03: #6b16ca;
  --color-data-visualization-04: #de2c62;
  --color-data-visualization-05: #003c96;
  --color-data-visualization-06: #a42700;
  --color-data-visualization-07: #0074e8;
  --color-data-visualization-08: #de3700;
  --color-data-visualization-09: #005c62;
  --elevation-floating: 0 0 8px rgba(0, 0, 0, 0.10);
  --elevation-raised-top: 0 2px 8px rgba(0, 0, 0, 0.12);
  --elevation-raised-bottom: 0 -2px 8px rgba(0, 0, 0, 0.12);
 }
</style>
`;

exports[`ColorSchemeProvider renders styling with media query when userPreference 1`] = `
<style>
  @media(prefers-color-scheme: dark) {
  :root {
  --g-colorRed0: #e60023;
  --g-colorRed100: #ff5247;
  --g-colorRed100Active: #b8001b;
  --g-colorRed100Hovered: #cf001f;
  --g-colorGray0: #030303;
  --g-colorGray0Active: #1f1f1f;
  --g-colorGray0Hovered: #121212;
  --g-colorGray50: #212121;
  --g-colorGray100: #404040;
  --g-colorGray100Active: #666;
  --g-colorGray100Hovered: #535353;
  --g-colorGray150: #585858;
  --g-colorGray150Hovered: #535353;
  --g-colorGray200: #ababab;
  --g-colorGray200Active: #9b9b9b;
  --g-colorGray200Hovered: #919191;
  --g-colorGray300: #efefef;
  --g-colorGray400: #fff;
  --g-colorTransparentDarkGray: rgba(255, 255, 255, 0.8);
  --g-colorTransparentGray60: rgba(250, 250, 250, 0.5);
  --g-colorTransparentGray100: rgba(250, 250, 250, 0.6);
  --g-colorTransparentGray500: rgba(0, 0, 0, 0.5);
  --g-colorTransparentWhite: rgba(51, 51, 51, 0.8);
  --color-text-default: #ffffff;
  --color-text-subtle: #a5a5a5;
  --color-text-success: #39d377;
  --color-text-error: #eb4242;
  --color-text-warning: #e18d00;
  --color-text-inverse: #111111;
  --color-text-shopping: #75bfff;
  --color-text-link: #45a3fe;
  --color-text-icon-default: #ffffff;
  --color-text-icon-subtle: #a5a5a5;
  --color-text-icon-success: #39d377;
  --color-text-icon-error: #eb4242;
  --color-text-icon-warning: #e18d00;
  --color-text-icon-info: #75bfff;
  --color-text-icon-recommendation: #b190ff;
  --color-text-icon-inverse: #111111;
  --color-text-icon-shopping: #75bfff;
  --color-background-default: #111111;
  --color-background-info-base: #75bfff;
  --color-background-info-weak: #003c96;
  --color-background-error-base: #f47171;
  --color-background-error-weak: #660000;
  --color-background-warning-base: #fdc900;
  --color-background-warning-weak: #7c2d00;
  --color-background-success-base: #6bec8c;
  --color-background-success-weak: #00422c;
  --color-background-recommendation-base: #b190ff;
  --color-background-recommendation-weak: #550aa9;
  --color-background-shopping: #75bfff;
  --color-background-secondary-base: #767676;
  --color-background-tertiary-base: #cdcdcd;
  --color-background-selected-base: #e9e9e9;
  --color-background-inverse-base: #f9f9f9;
  --color-background-education: #75bfff;
  --color-background-elevation-accent: #191919;
  --color-background-elevation-floating: #2b2b2b;
  --color-background-elevation-raised: #4a4a4a;
  --color-border-container: #4a4a4a;
  --color-border-default: #cdcdcd;
  --color-border-error: #f47171;
  --color-data-visualization-10: #d5c7ff;
  --color-data-visualization-11: #6bec8c;
  --color-data-visualization-12: #de2c62;
  --color-data-visualization-primary: #007cff;
  --color-data-visualization-success-graph: #6bec8c;
  --color-data-visualization-success-text: #39d377;
  --color-data-visualization-error: #eb4242;
  --color-data-visualization-01: #48d5c6;
  --color-data-visualization-02: #fdc900;
  --color-data-visualization-03: #9e68ff;
  --color-data-visualization-04: #fe8eb1;
  --color-data-visualization-05: #007cff;
  --color-data-visualization-06: #f77a38;
  --color-data-visualization-07: #abdbff;
  --color-data-visualization-08: #ffc58f;
  --color-data-visualization-09: #009990;
  --elevation-floating: none;
  --elevation-raised-top: 0 0.5px 0 #f9f9f9;
  --elevation-raised-bottom: 0 -0.5px 0 #f9f9f9;
 }
}
</style>
`;
